--- a/docs/requirements.yml
+++ b/docs/requirements.yml
@@ -184,11 +184,13 @@
     - "FR-004-03: （変更なし）定義外の風向文字列は-1.0として扱う。関連するログ出力の責務はユースケース層が担う(FR-007-05参照)。"
     - "(新規) FR-004-04: `RawWindDataDto` から抽出された時刻文字列と処理対象日の日付情報を組み合わせ、`datetime`型の観測日時オブジェクトを生成すること。その際、JMAデータの時刻表記「24:00」は、当日の「23:59」として扱うこと。"
   FR_005_データ統合処理:
-    - "FR-005-01: 各日付の処理済みデータ（エラーでスキップされた日のデータ項目は空欄）を時系列に統合すること。"
+    - "FR-005-01: `CollectWindDataUsecase`は、指定された期間内の各日付について処理を行い、生成された`WindDataRecord`（正常に取得・解析・変換されたデータ、またはエラーによりスキップ扱いとなったデータ）を単一のリストに蓄積すること。"
+    - "FR-005-02: データ取得時 (`HtmlFetchingError`)、HTML解析時 (`HtmlParsingError`)、またはその他の予期せぬ例外 (`Exception`) により特定の日付の処理がスキップされる場合、当該日付に対応する144個（00:10～24:00の10分毎）の`WindDataRecord`を生成しリストに追加すること。これらのレコードは、正しい観測日時（`observed_at`）を持ち、風向・風速関連の属性は欠損値（例: `WindDirectionValue.from_text(\"///\")` から生成される値）として設定されること。"
+    - "FR-005-03: 全ての日付の処理完了後、蓄積された全ての`WindDataRecord`を含むリストを、各レコードの`observed_at`属性をキーとして時系列昇順にソートすること。"
   FR_006_CSV出力処理:
     - "FR-006-01: 統合データをUTF-8エンコーディングのCSVファイルとして出力すること。"
     - "FR-006-02: CSV1行目に英語のヘッダー行を出力すること。"
-    - "FR-006-03: スキップされた日のデータは、日付・時刻列は記録し、風況データ項目は空欄とすること。"
+    - "FR-006-03: HTML取得/解析エラーでスキップされた日について、本Issue(US-009)で生成された欠損`WindDataRecord`（144件/日）に基づき、CSV上では日付・時刻列は記録され、他の風況データ項目は空欄（または指定の欠損値表現、例：空文字列）として出力されること。"
     - "FR-006-04: 同名ファイル存在時は別名（例: `filename(1).csv`）で保存すること。"
     - "FR-006-05: ファイル書き込み失敗時はエラーメッセージを表示し終了、ログに記録すること。"
   FR_007_進捗表示処理:
