feat: Implement CSV output functionality for wind data
- Added CsvOutputAdapter to handle saving wind data records to CSV files.
- Introduced IWindDataOutputPort interface for output port abstraction.
- Updated CollectWindDataUsecase to accept an output port for saving data.
- Enhanced argument parser to include optional output file path.
- Modified main.py to pass output path to the use case.
- Updated tests to cover new CSV output functionality and error handling.
- Created test cases for CsvOutputAdapter to ensure correct CSV generation and error management.

--- a/docs/requirements.yml
+++ b/docs/requirements.yml
@@ -159,11 +159,11 @@
 
 機能要件:
   FR_001_CUI:
-    - "FR-001-01: 以下の必須パラメータをコマンドライン引数として受け付けること: `--prefecture_no` (文字列), `--block_no` (文字列), `--start_date` (文字列), `--days` (整数)。"
-    - "FR-001-02: オプションパラメータ（データ取得間隔、出力CSVファイルパス）を受け付けること。（変更なし）"
+    - "FR-001-01: 以下の必須パラメータをコマンドライン引数として受け付けること: `--prefecture_no` (文字列), `--block_no` (文字列), `--start_date` (文字列, `YYYY-MM-DD`形式), `--days` (整数)。"
+    - "FR-001-02: オプションパラメータとして `--output` (出力CSVファイルのパス、文字列、省略時はカレントディレクトリに `wind_data_YYYYMMDD.csv` 形式で自動命名) を受け付けること。"
     - "FR-001-03: 必須パラメータ不足時は、`argparse` が生成する標準エラーメッセージを表示し、終了コード `2` でプロセスを終了すること。"
-    - "FR-001-04: ヘルプメッセージ表示オプション (`--help`) を提供すること。（変更なし）"
-    - "(新規) FR-001-05: パラメータの値がドメインルールに違反する場合（例: `start_date` のフォーマットが `YYYY-MM-DD` でない、`days` が1未満など）、アプリケーション固有のエラーメッセージを標準エラー出力に表示し、終了コード `1` でプロセスを終了すること。"
+    - "FR-001-04: ヘルプメッセージ表示オプション (`--help`) を提供すること。"
+    - "FR-001-05: パラメータの値がドメインルールに違反する場合（例: `start_date` のフォーマットが `YYYY-MM-DD` でない、`days` が1未満など）、アプリケーション固有のエラーメッセージ（`パラメータが不正です`等）を標準エラー出力に表示し、終了コード `1` でプロセスを終了すること。"
   FR_002_データ取得処理:
     - "FR-002-01: (変更なし - US-004の責務)"
     - "FR-002-02: ユースケース (`CollectWindDataUsecase`) は、`IJmaPageFetcher`ポートを介して、指定されたURLからHTMLコンテンツを取得すること。取得処理は `JmaPageFetcherAdapter` が担当する。"
@@ -181,11 +181,11 @@
   FR_005_データ統合処理:
     - "FR-005-01: 各日付の処理済みデータ（エラーでスキップされた日のデータ項目は空欄）を時系列に統合すること。"
   FR_006_CSV出力処理:
-    - "FR-006-01: 統合データをUTF-8エンコーディングのCSVファイルとして出力すること。"
-    - "FR-006-02: CSV1行目に英語のヘッダー行を出力すること。"
-    - "FR-006-03: スキップされた日のデータは、日付・時刻列は記録し、風況データ項目は空欄とすること。"
-    - "FR-006-04: 同名ファイル存在時は別名（例: `filename(1).csv`）で保存すること。"
-    - "FR-006-05: ファイル書き込み失敗時はエラーメッセージを表示し終了、ログに記録すること。"
+    - "FR-006-01: 統合データをUTF-8エンコーディング（BOM付きの `utf-8-sig`）のCSVファイルとして出力すること。"
+    - "FR-006-02: CSV1行目に英語のヘッダー行 (`observed_at`, `avg_wind_direction_deg`, `avg_wind_speed_mps`, `max_wind_direction_deg`, `max_wind_speed_mps`) を出力すること。"
+    - "FR-006-03: スキップされた日（または値が-1.0）の風況データ項目は、CSV上で空欄として出力されること（`observed_at` 列は常に値を記録）。"
+    - "FR-006-04: 出力先に同名ファイルが存在する場合、ファイル名の末尾に `(連番)` を付与した形式（例: `filename(1).csv`, `filename(2).csv`）で別名保存すること。"
+    - "FR-006-05: ファイル書き込みに失敗した場合（IOError, PermissionError等）、`FileOutputError` が送出され、`main.py` で捕捉後、CUIに「エラー: ファイル出力に失敗しました。」というメッセージと詳細を表示し、ログにもエラーを記録して終了コード `1` でプロセスを終了すること。"
   FR_007_進捗表示処理:
     - "FR-007-01: 処理開始メッセージを表示すること。"
     - "FR-007-02: 日次データ処理ごとに、現在処理中の日付と残り日数をCUIに表示・更新すること。"
