docs: README.mdの内容を更新し、使用方法やコマンドラインオプションを明確化

--- a/docs/issues.yml
+++ b/docs/issues.yml
@@ -974,3 +974,41 @@ github_issues_list:
         このエラーの根本原因は、HTMLパーサーだけでなく、その前段のURL生成ロジックにある可能性が高い。
         JMAサイトの正しいURL形式を特定し、`JMA_10MIN_DATA_URL_TEMPLATE` および `JmaUrlBuilder` を修正することが本Issueの主眼となる。
         その上で、`JmaHtmlParser` が「データなし」ページ（正しいURLだがテーブルがないケース）を適切に扱えることも保証する。
+
+    - id: "DOC-001"
+      title: "[Feature][Documentation] README.mdの全体的な整備と使用方法の追記"
+      description: |
+        基本的なデータ取得機能が実装され、CUIツールとして動作するようになったため、プロジェクトの顔である `README.md` を現状に合わせて更新する必要がある。
+        現在のREADMEには、具体的な実行方法やコマンドラインオプションに関する説明が不足しており、新規参画者や利用者がツールを使い始めるのが困難な状態となっている。
+        このIssueでは、READMEに必要な情報を網羅的に追記し、誰でも簡単にツールを試せる状態にすることを目的とする。
+      owner: ""
+      status: "Open"
+      created_at: "2025-05-29" # JST
+      updated_at: "2025-05-29" # JST
+      epic: "EPIC-DOC" # ドキュメンテーション整備のエピックに関連付け
+      user_story_reference: "" # 特定のユーザーストーリーには直接紐付かない
+      acceptance_criteria:
+        - "[ ] `README.md` に、プロジェクトの目的と主な機能が明確に記述されていること。"
+        - "[ ] `README.md` に、ツールの実行に必要な環境（Dockerなど）と、そのセットアップ方法が記述されていること。"
+        - "[ ] `README.md` の「使い方」セクションに、CUIツールを実行するための具体的なコマンドライン例が記述されていること。（例: 1日分のデータ取得、複数日のデータ取得）"
+        - "[ ] `README.md` に、`--prefecture_no`, `--block_no`, `--start_date`, `--days`, `--output` といった全てのコマンドラインオプションに関する説明が記述されていること。"
+        - "[ ] `README.md` に、出力されるCSVファイルのフォーマット例が記載されていること。"
+        - "[ ] `README.md` に、データソースが気象庁であることを明記し、`docs/COMPLIANCE.md` で定義されている推奨出典表記が記載されていること。(`TASK-ATTRIBUTION-DOC-01` の成果を反映)"
+        - "[ ] `README.md` から、他の関連ドキュメント（例: `docs/COMPLIANCE.md`）へのリンクが適切に設定されていること。"
+      implementation_tasks:
+        - "[ ] 現在の `README.md` の内容をレビューし、構成を検討する。"
+        - "[ ] 「## 概要」セクションを更新し、プロジェクトの目的を明確化する。"
+        - "[ ] 「## 主な機能」セクションを新たに追加し、データ収集、変換、CSV出力などの機能をリストアップする。"
+        - "[ ] 「## 実行環境」セクションを新たに追加し、Dockerおよびdocker-composeを使用した環境構築手順を記述する。"
+        - "[ ] 「## 使い方」セクションを更新し、基本的なコマンド実行例（1日分、複数日、出力ファイル指定など）を記述する。"
+        - "[ ] 「## コマンドラインオプション」セクションを新たに追加し、`main.py` が受け付ける全ての引数について説明する表を作成する。"
+        - "[ ] 「## 出力形式」セクションを新たに追加し、生成されるCSVファイルのヘッダーとデータ例を示す。"
+        - "[ ] 「## データソースと出典表記」セクションを新たに追加し、気象庁からのデータを利用していることと、推奨されるクレジット表記を記載する。"
+        - "[ ] 「## ライセンス」セクションを新たに追加し、このプロジェクトのライセンス（例: MIT License）を明記する。"
+        - "[ ] 全ての変更をレビューし、プルリクエストを作成する。"
+      labels:
+        - "type:feature"
+        - "layer:documentation"
+        - "priority:medium"
+      dependencies:
+        - "TASK-ATTRIBUTION-DOC-01_Issue" # このタスクの成果を反映するため
